@@ -29,6 +29,7 @@ Version 1.5.01-dev
  + Added magical mod config file import command, for Cauldron 1.7+. Check wiki for usage
  + Added particle effects and sounds to "Call of the Wild" (Taming)
  + Added summon length to "Call of the Wild". Summons will now commit suicide after their lifespan expires
+ + Added feature which makes tamed wolves attack a target shot by the owner
  = Fixed bug where pistons would mess with the block tracking
  = Fixed bug where the Updater was running on the main thread.
  = Fixed bug when players would use /ptp without being in a party
